# steam-depot-vfs

./: .gitignore  CLAUDE.md  Cargo.toml  silksong.toml  silksong_manifests
crates/steam-depot/: Cargo.toml
crates/steam-depot-mount/: Cargo.toml
crates/steam-depot-mount/src/: fuse.rs  inode.rs  lib.rs  session.rs  tree.rs
crates/steam-depot-vfs/: Cargo.toml
crates/steam-depot-vfs/examples/: cat.rs
crates/steam-depot-vfs/src/: auth.rs  context.rs  depot_key_cache.rs  error.rs  fs.rs  lib.rs  manifest_cache.rs  session.rs
crates/steam-depot-vfs/src/chunk_store/: cache.rs  cdn.rs  mod.rs
crates/steam-depot/src/: auth.rs  config.rs  main.rs  prefetch.rs  prune.rs  stats.rs  verify.rs
examples/: cat.rs  mount.rs
scripts/: analyze_trace.py
src/: auth.rs  context.rs  depot_fs.rs  error.rs  fs.rs  lib.rs  manifest_cache.rs  sha.rs
src/chunk_store/: cache.rs  cdn.rs  mod.rs
