[workspace]
resolver = "3"
members = ["crates/*"]

[workspace.package]
edition = "2024"
version = "0.1.0"

[workspace.dependencies]
anyhow = "1.0.102"
bytes = "1.11.1"
clap = { version = "4.6.1", features = ["derive"] }
directories = "6.0.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
steam-vent = "0.5.0"
steam-vent-depot = { version = "0.1.0", git = "https://github.com/jakobhellermann/steam-vent-depot" }
thiserror = "2.0.18"
tokio = { version = "1.52.3", default-features = false }
toml = "0.9.8"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
