[package]
name = "steam-depot-vfs"
version.workspace = true
edition.workspace = true

[dependencies]
bytes.workspace = true
postcard = { version = "1.1.3", features = ["alloc"] }
serde.workspace = true
steam-vent-depot.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["fs", "io-util", "sync"] }
tracing.workspace = true

[dev-dependencies]
anyhow.workspace = true
clap.workspace = true
directories.workspace = true
serde_json.workspace = true
steam-vent.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "fs", "io-util"] }
tracing-subscriber.workspace = true
