[package]
name = "steam-depot"
version.workspace = true
edition.workspace = true

[[bin]]
name = "steam-depot"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
directories.workspace = true
serde.workspace = true
serde_json.workspace = true
steam-depot-mount = { path = "../steam-depot-mount" }
steam-depot-vfs = { path = "../steam-depot-vfs" }
steam-vent.workspace = true
steam-vent-depot.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "fs", "io-util", "signal"] }
toml.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
