[package]
name = "steam-depot"
version.workspace = true
edition.workspace = true

[[bin]]
name = "steam-depot"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
directories.workspace = true
futures = "0.3.31"
sha1 = "0.10.6"
indicatif = "0.18.0"
tracing-indicatif = "0.3.13"
serde.workspace = true
serde_json.workspace = true
steam-depot-vfs = { path = "../steam-depot-vfs" }
steam-vent.workspace = true
steam-vent-depot.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "fs", "io-util", "signal"] }
toml.workspace = true
tracing.workspace = true
tracing-perfetto = "0.1.5"
tracing-subscriber.workspace = true

[target.'cfg(target_os = "linux")'.dependencies]
steam-depot-mount = { path = "../steam-depot-mount" }
